Atrosha/proxy/error.txt
   Compiling atrosha-proxy v0.2.0 (C:\Python\Project Atrosha\Atrosha\proxy)
warning: unused import: `PreparedVerifyingKey`
 --> src\zkp\verifier.rs:1:65
  |
1 | use ark_groth16::{Groth16, VerifyingKey, prepare_verifying_key, PreparedVerifyingKey, Proof};
  |                                                                 ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: borrow of moved value: `agent_daily_limit`
   --> src\zkp\compiler.rs:114:25
    |
 62 |         let agent_daily_limit = FpVar::new_witness(cs.clone(), || Ok(witness.agent_daily_limit))?;
    |             ----------------- move occurs because `agent_daily_limit` has type `FpVar<ark_ff::Fp<MontBackend<FrConfig, 4>, 4>>`, which does not implement the `Copy` trait
...
 83 |         ctx.insert("agent.daily_limit", AllocatedExpr::Field(agent_daily_limit));
    |                                                              ----------------- value moved here
...
114 |                 let _ = agent_daily_limit.square()?;
    |                         ^^^^^^^^^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
 83 |         ctx.insert("agent.daily_limit", AllocatedExpr::Field(agent_daily_limit.clone()));
    |                                                                               ++++++++

error[E0382]: borrow of moved value: `tx_target`
   --> src\zkp\compiler.rs:122:25
    |
 70 |         let tx_target = FpVar::new_witness(cs.clone(), || Ok(witness.tx_target))?;
    |             --------- move occurs because `tx_target` has type `FpVar<ark_ff::Fp<MontBackend<FrConfig, 4>, 4>>`, which does not implement the `Copy` trait
...
 91 |         ctx.insert("tx.target", AllocatedExpr::Field(tx_target));
    |                                                      --------- value moved here
...
122 |                 let _ = tx_target.square()?;
    |                         ^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
 91 |         ctx.insert("tx.target", AllocatedExpr::Field(tx_target.clone()));
    |                                                               ++++++++

warning: unused variable: `i`
   --> src\zkp\compiler.rs:113:17
    |
113 |             for i in 0..250 {
    |                 ^ help: if this is intentional, prefix it with an underscore: `_i`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `diff`
   --> src\zkp\compiler.rs:280:9
    |
280 |     let diff = b - a;
    |         ^^^^ help: if this is intentional, prefix it with an underscore: `_diff`

warning: unused variable: `config`
   --> src\zkp\compiler.rs:321:5
    |
321 |     config: &PoseidonConfig<Fr>
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`

For more information about this error, try `rustc --explain E0382`.
warning: `atrosha-proxy` (lib) generated 4 warnings
error: could not compile `atrosha-proxy` (lib) due to 2 previous errors; 4 warnings emitted
